--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
-.carousel {
+.carousel,
+.login-heading {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-bottom: 20px;
 }
 
