--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,11 @@
     margin-bottom: 20px;
 }
 
+.aboutUs-heading {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .carousel-image {
     display: block;
     margin-left: auto;
