--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,11 @@
 .carousel,
-.login-heading {
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 20px;
-}
-
-.aboutUs-heading {
+.login-heading,
+.faq-heading {
     text-align: center;
     margin-bottom: 20px;
+    font-family: Graphik-Medium, sans-serif;
+    font-size: 48px;
+    color: #181c47;
 }
 
 .carousel-image {
